pages/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind screens;

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

/* For Firefox scrollbar */
:root {
  scrollbar-color: #212c49 #f1f1f1 !important;
  scrollbar-width: thin !important;
}

html,
body {
  height: 100%;
  cursor: url('/images/cursor.png'), auto !important;
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

h1 {
  font-size: 2.5rem;
  font-weight: 700;
}

h2 {
  font-size: 2rem;
  font-weight: 700;
}

h3 {
  font-size: 1.5rem;
  font-weight: 700;
}

h4 {
  font-size: 1.25rem;
  font-weight: 700;
}

h5 {
  font-size: 1rem;
  font-weight: 700;
}

h6 {
  font-size: 0.75rem;
  font-weight: 700;
}

ul {
  list-style: inside disc;
}

ol {
  list-style: inside decimal;
}

@layer components {
  .btn {
    @apply inline-flex items-center justify-center px-6 py-[0.65rem] text-sm rounded cursor-pointer border focus:outline-none font-semibold;
  }

  .btn-brand {
    /* apply btn */
    @apply text-white rounded-xl bg-brand-700 border-2 border-brand-700 font-semibold;
  }

  .btn-secondary {
    @apply text-brand-800 font-semibold rounded-xl border-2 border-brand-700 bg-transparent;
  }
  .btn-warning {
    @apply text-white font-semibold rounded-xl border-2 bg-error-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-error focus:ring-white;
  }
}

/* Used to changee the background color of MUI datepicker component (day selected) */
.Mui-selected {
  background-color: #465b81 !important;
}

.hover-underline-animation {
  display: inline-block;
  position: relative;
}

.hover-underline-animation::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #fcd95b;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover-underline-animation:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

/* Scroll bar */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #212c49;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #192137;
}

/* Animate hero image */

/* Animate spinner_left to rotate when hovered then rotate back */
#spinner_left {
  transform-origin: 40.795% 43.7%;
  animation: spin 7s linear infinite;
  transition: all 0.5s ease-in-out;
}

#spinner_right {
  transform-origin: 88% 53%;
  animation: spin 10s linear infinite;
  animation-direction: reverse;
  transition: all 0.5s ease-in-out;
}

#spinner_mid {
  transform-origin: 72.45% 34.25%;
  animation: spin 10s linear infinite;
}

@keyframes spin {
  0% {
    rotate: 0deg;
  }
  100% {
    rotate: 360deg;
  }
}

/* Animate drawing line */

#animated_line_left {
  stroke-dasharray: 1000;

  animation: fade_line_in_and_out 5s linear forwards infinite;
}

#animated_line_right {
  stroke-dasharray: 1000;

  animation: fade_line_in_and_out 5s linear forwards infinite;
  animation-delay: 2s;
}

@keyframes fade_line_in_and_out {
  0% {
    stroke-dashoffset: 1000;
  }
  50% {
    stroke-dashoffset: 800;
  }
  70% {
    stroke-dashoffset: 0;
  }
  100% {
    stroke-dashoffset: -200;
  }
}

/* The category container in the toolbox. */
.blocklyTreeRow {
  background-color: #465b81;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 5px solid #212c49;
  padding: 0.8rem;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  margin-bottom: 1rem;
}

/* The category label in the toolbox when it is selected. */
.blocklyTreeSelected {
  background-color: #212c49 !important;
  border-left: 10px solid #ffc857 !important;
  box-shadow: 0 0 0 2px #ffc857;
}

/* A category label in the toolbox. */
.blocklyTreeLabel {
  color: #f1f1f1;
  font-weight: 500;
  font-size: 1rem;
  margin: 1rem;
}

/* On hover of a category in the toolbox */
.blocklyTreeRow:hover {
  background-color: #212c49;
  border-left: 5px solid #465b81;
  box-shadow: 0 0 0 2px #465b81;
}

/* The whole toolbox css */
.blocklyToolboxDiv {
  padding: 1rem;
  background-color: #edf2f7;
  border-right: 4px solid #6480a7;
}

.blocklyScrollbarHandle {
  display: none !important;
}

.blocklyFlyoutBackground {
  fill: #edf2f7;
}

.background-zigzag3d-pattern {
  background-color: #edf2f7;
  opacity: 0.15;
  background: linear-gradient(135deg, #a7bfdc55 25%, transparent 25%) -40px 0/ 80px 80px,
    linear-gradient(225deg, #a7bfdc 25%, transparent 25%) -40px 0/ 80px 80px,
    linear-gradient(315deg, #a7bfdc55 25%, transparent 25%) 0px 0/ 80px 80px,
    linear-gradient(45deg, #a7bfdc 25%, #edf2f7 25%) 0px 0/ 80px 80px;
}

